--- a/css/style.css
+++ b/css/style.css
@@ -666,8 +666,9 @@ html[xmlns] .slides {
 
 .about-media img{
 	box-shadow: 0px 0px 5px #9F9B9B;
-	width:300px;
-	height: auto;
+	width:100%;
+	height: 100%;
+	margin-top: 60px;
 }
 
 .about-desc{
